--- a/teachersite/_config.yml
+++ b/teachersite/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: AP CS50
+title: Ms. James CS50
 name: Hailey James
 email: haileyjames@college.harvard.edu
 school: American Fork High School
